fix z-index

--- a/src/nothing-to-see.css
+++ b/src/nothing-to-see.css
@@ -2,7 +2,7 @@
    width: 100%;
    position: fixed;
    top: 0;
-   z-index: 5;
+   z-index: 100;
    background-color: red;
 
 }
